# panos-agent

./: .flake8  .gitignore  ASYNC_MIGRATION_COMPLETE.md  CLI_VALIDATION_SUMMARY.md  DEVICE_CONTEXT_SUMMARY.md  DEVICE_DETECTION_VALIDATION.md  DOCS_UPDATE_SUMMARY.md  KNOWN_TEST_ISSUES.md  LANGGRAPH_STUDIO.md  Makefile  PHASE_3.1.2_COMPLETE.md  PHASE_3.1.3_COMPLETE.md  PHASE_3.2.1_COMPLETE.md  PHASE_3.2_CONTEXT.md  PHASE_3.3_PANORAMA_COMPLETE.md  PHASE_3.4_COMPLETE.md  PHASE_3.5_COMPLETE.md  PHASE_3.5_QUICK_REFERENCE.md  PHASE_3.6_COMPLETE.md  PRD.md  QUICKSTART_STUDIO.md  QUICK_TEST_COMMANDS.sh  README.md  REMAINING_ISSUES_RESOLVED.md  ROUTER_IMPLEMENTATION_SUMMARY.md  ROUTER_TEST_PROMPTS.md  TASK_2.5_COMPLETE.md  TESTING_EXAMPLES.md  TEST_COMMANDS.md  TEST_FIXTURES_UPDATE.md  TEST_FIX_SUMMARY.md  TEST_MIGRATION_SUMMARY.md  TEST_RECURSION_LIMITS.md  TODO.md  langgraph.json  pyproject.toml  test_approval_cli.md
.cursor/plans/: re-9ba7254b.plan.md
docs/: ARCHITECTURE.md  CLAUDE_MODELS.md  DEPLOYMENT.md  EVALUATION_DATASET.md  EVALUATION_GUIDE.md  MEMORY_SCHEMA.md  MODEL_UPDATE_SUMMARY.md  MULTI_VSYS_SUPPORT.md  PANORAMA.md  REACT_VS_DETERMINISTIC.md  RUNTIME_CONTEXT_TESTS.md  SETUP.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  XML_API_REFERENCE.md
docs/panos_config/: .gitignore  COMPLETION_SUMMARY.md  INTEGRATION_SUMMARY.md  README.md  SUMMARY.md  XPATH_MAPPING.md
evaluation_results/: eval_autonomous_20251108_230508.json  eval_autonomous_20251108_231033.json  eval_autonomous_20251108_231315.json  eval_deterministic_20251108_230513.json  eval_deterministic_20251108_231038.json  eval_deterministic_20251108_231319.json
examples/: api_usage.py  dataset_template.json  device_detection.py
scripts/: analyze_panos_config.py  create_custom_dataset.py  dataset_template.py  evaluate.py  test_router.sh  test_runtime_context.sh
src/: autonomous_graph.py  deterministic_graph.py  router_graph.py
src/cli/: checkpoint_commands.py  commands.py
src/core/: anonymizers.py  checkpoint_manager.py  client.py  config.py  diff_engine.py  intent_classifier.py  memory_store.py  panos_api.py  panos_models.py  panos_xpath_map.py  retry_helper.py  retry_policies.py  state_schemas.py  store_context.py  xml_validation.py
tests/: conftest.py
(+52 files in other folders)
